[package]
name = "swagger_detection"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to detect Swagger UI endpoints on specified hosts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.23"
colored = "2.0.0"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.16"
env_logger = "0.10.0"

[features]
default = []
